fix(style): Add missing color variables

--- a/src/styles/themes/_solarized.scss
+++ b/src/styles/themes/_solarized.scss
@@ -23,3 +23,13 @@ $light-gray: #CCCCCC;
 
 $error:      #FF5722;
 
+$primary: #2aa198;
+$primary-dark: #00726a;
+$primary-light: #65d3c9;
+
+$secondary: #d33682;
+$secondary-dark: #9d0056;
+$secondary-light: #ff6cb1;
+
+$text-on-primary: #fcfaf2;
+$text-on-secondary: #fcfaf2;
